--- a/editabletable/editabletable.css
+++ b/editabletable/editabletable.css
@@ -1,10 +1,7 @@
-#app {
-	margin-left: 50px;
-}
 table {
 	border-collapse: collapse;
 }
-table, th, td {
+th, td {
 	padding: 5px;
 	border: 1px solid black;
 }
@@ -18,6 +15,13 @@ input {
 button {
 	margin-top: 8px;
 }
-#done {
-	display: block;
+.delete {
+	border: none;
+}
+#body {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+}
+#app, #chart {
 }
